--- a/WebAppApi/appsettings.json
+++ b/WebAppApi/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SqlServer": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=C:\\SkolaUppgifter\\ASP.NET\\WebbAppWhithApi\\Infrastructure\\Data\\Local_database.mdf;Integrated Security=True;Connect Timeout=30"
+    "SqlServer": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=C:\\Users\\User\\cloner-git\\WebappApi\\Infrastructure\\Data\\LocalApi-Database.mdf;Integrated Security=True;Connect Timeout=30"
   }
 }
