--- a/WebAppApi/appsettings.json
+++ b/WebAppApi/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SqlServer": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=C:\\Users\\User\\cloner-git\\WebappApi\\Infrastructure\\Data\\LocalApi-Database.mdf;Integrated Security=True;Connect Timeout=30"
+    "SqlServer": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=C:\\Users\\lears\\source\\repos\\WebbAppWhithApi\\Infrastructure\\Data\\LocalApi-Database.mdf;Integrated Security=True"
   }
 }
